--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="score-box">
-                <h3 class="home-guest">GUEST</h3>
+                <h3 class="home-guest">AWAY</h3> <!--Changed the word "Guest" to "Away"-->
                 <h3 id="guest-score">0</h3>
                 <div class="button-group">
                     <button class="score-buttons" onclick="guestsingle()">+1</button>
